--- a/resources/CSS/contact.css
+++ b/resources/CSS/contact.css
@@ -1,5 +1,3 @@
-$color:#8f7586;
-
 body {
   overflow: hidden;
   overflow-y: scroll;
@@ -7,17 +5,17 @@ body {
 
 nav h2 {
   font-family: cursive;
-  color: $color;
+  color: #8f7586;
 }
 
 .nav-link {
-  color: $color;
+  color: #8f7586;
   font-family: cursive;
 }
 
 .contact {
   font-family: cursive;
-  color: $color;
+  color: #8f7586;
   position: absolute;
   top: 33%;
   left: 50%;
@@ -48,7 +46,7 @@ input {
 
 ::-webkit-input-placeholder {
   font-family: cursive;
-  color: $color;
+  color: #8f7586;
 }
 
 .btn {
@@ -58,13 +56,15 @@ input {
   padding: 10px;
   width: 500px;
 }
+
 .btn a {
-  color: $color;
+  color: #8f7586;
   font-size: 20px;
   font-family: cursive;
 }
+
 .btn a:hover {
-  color: $color;
+  color: #8f7586;
 }
 
 .btn:hover {
@@ -100,5 +100,6 @@ input {
     margin-top: 150px;
   }
 }
-
 /*# sourceMappingURL=contact.scss.map */
+
+/*# sourceMappingURL=contact.css.map */
